[gd_scene load_steps=8 format=3 uid="uid://bp2o15b80omxa"]

[ext_resource type="Texture2D" uid="uid://baucxg187vtmm" path="res://randomAssets/Yeti.png" id="1_dsux6"]
[ext_resource type="Script" path="res://Yeti/Scripts/yeti.gd" id="1_f10na"]
[ext_resource type="PackedScene" uid="uid://cdn4csyqllher" path="res://Yeti/Scenes/snowball.tscn" id="2_gikyj"]
[ext_resource type="PackedScene" uid="uid://bqdgi2yqe2mh1" path="res://Scenes/raycastsAI.tscn" id="4_l7r2k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1ofsq"]
animations = [{
"frames": [],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dsux6")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dsux6")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_trqd4"]
radius = 21.0
height = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lp8v4"]
size = Vector2(32.6625, 20)

[node name="Yeti" type="CharacterBody2D"]
position = Vector2(-1, -1)
script = ExtResource("1_f10na")
bullet_scene = ExtResource("2_gikyj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -3)
scale = Vector2(0.13, 0.13)
sprite_frames = SubResource("SpriteFrames_1ofsq")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_trqd4")

[node name="Timer" type="Timer" parent="."]

[node name="Raycasts" parent="." instance=ExtResource("4_l7r2k")]
texture_filter = 1
scale = Vector2(4, 4)

[node name="WallVerifier" type="RayCast2D" parent="."]
scale = Vector2(3, 3)
target_position = Vector2(200, 0)
collision_mask = 4

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
visible = false
scale = Vector2(70, 70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_lp8v4")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
